--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "rn-cli": "node node_modules/react-native/local-cli/cli.js",
+    "start-android": "yarn rn-cli run-android",
+    "start-ios": "yarn rn-cli run-ios",
+    "start": "yarn rn-cli start",
     "test": "jest"
   },
   "dependencies": {
@@ -12,8 +15,16 @@
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
+    "eslint": "^5.3.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier": "^1.15.3",
     "react-test-renderer": "16.6.3"
   },
   "jest": {
