--- a/package.json
+++ b/package.json
@@ -10,24 +10,54 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.6.3",
+    "react": "16.7.0",
     "react-native": "0.57.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@types/jest": "^23.3.12",
+    "@types/react": "^16.7.18",
+    "@types/react-native": "^0.57.27",
+    "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
+    "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
-    "eslint": "^5.3.0",
     "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.51.1",
+    "metro-react-native-babel-preset": "^0.51.1",
     "prettier": "^1.15.3",
-    "react-test-renderer": "16.6.3"
+    "react-addons-test-utils": "^15.6.2",
+    "react-native-typescript-transformer": "^1.2.11",
+    "react-test-renderer": "16.7.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.2.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.jest.json"
+      }
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ]
   }
 }
