--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.7.0",
-    "react-native": "0.57.8"
+    "react-native": "0.57.8",
+    "react-native-iphone-x-helper": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
